--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-PyQt6==6.4.0
-PyQt6-Qt6==6.4.2
-PyQt6-sip==13.4.0
+python-vlc==3.0.18121
+gst==0.1.0
+PyP100==0.1.2
+qasync==0.23.0
+PyQt6==6.4.2
+PyQt6-Qt6==6.4.3
+PyQt6-sip==13.4.1
 PyQt6-tools
